Add movie endpoint, returns main infos with playIn items and genres, close #2
